--- a/rules.html
+++ b/rules.html
@@ -49,6 +49,7 @@
                     <p> Základná časť sa hraje formátom každy proti každému <b>bez odvetných zápasov</b>. Jedna skupina, v ktorej sa stretnú všetky prihlásené tímy v turnaji.</p>
                     <p> Rozhoduje - Počet bodov > Vzájomné zápasy  > Skóre > Počet vstrelených gólov  </p>
                     <p> Bodovanie: Výhra +3 / VPP +2 / PPP +1 / P +0</p>
+                    <p> PRAVIDLO PRE BRANKÁROV - každý brankár, ktorí chce byť zapojený o najlepšieho brankára sezóny musí odohrať minimálne 5 zápasov a mať minimálne 31 minút icetime v zápase. Najlepší brankár sa vyhlasuje na konci ZČ.</p>
                     <p>Víťazovi základnej časti bude odovzdaný  <b style="color: #DAA520; font-family: italic; font-size: 17px;">Pohár Dušana Pašeka</b> <img src="img/pasek_pohar.png" height="50"></p>
 
                     <p><b style="color:#BD0000; font-size: 30px;">Play-off</b></p>
