--- a/stats.html
+++ b/stats.html
@@ -104,7 +104,7 @@ let personData = [
         {'flag':'<img src="img/nat/arg.gif" height="14">', 'name':' Silvio Diamante ', 'club':'<img src=img/small/zvolen-small.png> Zvolen', 'points':0, 'goals':0, 'asists': 0, 'rating': 433 },
        
         // ŽILINA //
-        {'flag':'<img src="img/nat/uk.gif" height="14">', 'name':' Thomas Murray ', 'club':'<img src=img/small/zilina-small.png> Zilina', 'points':0, 'goals':0, 'asists': 0, 'rating': 404 },
+        {'flag':'<img src="img/nat/uk.gif" height="14">', 'name':' Thomas Murray ', 'club':'<img src=img/small/zilina-small.png> Žilina', 'points':0, 'goals':0, 'asists': 0, 'rating': 404 },
     
  
     ];
