--- a/playoff.html
+++ b/playoff.html
@@ -153,8 +153,8 @@
             <i class="fa fa-trophy"></i>
             <div class="round-details">Finále <br/><span class="date"></span></div> <!-- DOPISAT DATUMY ZAPASOV DO DATE SPAN -->     
             <ul class ="matchup championship">
-                <li class="team team-top" align="left"><img src="img/logo/snv.png" height="20"> HK Spišská Nová Ves<span class="vote-count">&nbsp;</span></li>
-                <li class="team team-bottom" align="left"><img src="img/logo/trencin.png" height="20"> HK Dukla Trenčín<span class="vote-count">&nbsp;</span></li>
+                <li class="team team-top" align="left"><img src="img/logo/snv.png" height="20"> HK Spišská Nová Ves<span class="score">0</span></li>
+                <li class="team team-bottom" align="left"><img src="img/logo/trencin.png" height="20"> HK Dukla Trenčín<span class="score">1</span></li>
             </ul>
         </div>
 </div>
@@ -185,7 +185,7 @@
                <tr id="spodnahranica-zapasy">
                     <td class="datum-playoff">1.8.2020</td>
                     <td><img class="logo-playoff" src="img/logo/trencin.png" height="15"> <a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=29244" style="color: black">HK Dukla Trenčín</a> </td>
-                    <td class="vysledok"><b></b></td>
+                    <td class="vysledok"><b>3:1</b></td>
                     <td><img class="logo-playoff" src="img/logo/snv.png" height="15"> <a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=25632" style="color: black;">HK Spišská Nová Ves</a></td>
                 </tr>
                 <tr id="spodnahranica-zapasy">
@@ -216,18 +216,19 @@
                 <th style="width: 180px;">Vonku</th>
             </thead>
             <tbody>
-               <tr id="spodnahranica-zapasy">
-                    <td class="datum-playoff">1.8.2020</td>
-                    <td><img class="logo-playoff" src="img/logo/hc_kosice.png" height="15"> <a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=9011" style="color: black">HC Košice</a></td>
-                    <td class="vysledok"><b></b></td>
-                    <td><img class="logo-playoff" src="img/logo/Skalica.png" height="15"> <a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=2991" style="color: black">HK Skalica</a></td>
-                </tr>
                 <tr id="spodnahranica-zapasy">
-                    <td class="datum-playoff">2.8.2020</td>
+                    <td class="datum-playoff">1.8.2020</td>
                     <td><img class="logo-playoff" src="img/logo/Skalica.png" height="15"> <a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=2991" style="color: black">HK Skalica</a></td>
-                    <td class="vysledok"><b></b></td>
+                    <td class="vysledok"><b>0:5</b></td>
                     <td><img class="logo-playoff" src="img/logo/hc_kosice.png" height="15"> <a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=9011" style="color: black">HC Košice</a></td>
                 </tr>
+               <tr id="spodnahranica-zapasy">
+                    <td class="datum-playoff">2.8.2020</td>
+                    <td><img class="logo-playoff" src="img/logo/hc_kosice.png" height="15"> <a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=9011" style="color: black">HC Košice</a></td>
+                    <td class="vysledok"><b></b></td>
+                    <td><img class="logo-playoff" src="img/logo/Skalica.png" height="15"> <a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=2991" style="color: black">HK Skalica</a></td>
+                </tr>
+                
                <tr>
                     <td class="datum-playoff">5.8.2020</td>
                     <td></td>
