--- a/playoff.html
+++ b/playoff.html
@@ -74,6 +74,24 @@
             </tr>
             <tr>
                 <td class="umiestnenie-zlatakorcula" style="background-color: #C0C0C0;text-align: center;">2.</td>
+                <td class="meno-hraca-v-tabulke-playoff">Herman Lohmus</td>
+                <td><img src="img/small/trencin-small.png" height="14" class="logo" ></td>
+                <td style="padding-top: 2px;">Trenčín</td>
+                <td class="bodovanie">7</td>
+                <td class="bodovanie">0</td>
+                <td class="bodovanie">7</td>
+            </tr>
+            <tr>
+                <td class="umiestnenie-zlatakorcula" style="background-color: #cd7f32;text-align: center;">3.</td>
+                <td class="meno-hraca-v-tabulke-playoff">Radúz Rišnovský</td>
+                <td><img src="img/small/trencin-small.png" height="14" class="logo" ></td>
+                <td style="padding-top: 2px;">Trenčín</td>
+                <td class="bodovanie">6</td>
+                <td class="bodovanie">6</td>
+                <td class="bodovanie">0</td>
+            </tr>
+            <!--<tr>
+                <td class="umiestnenie-zlatakorcula" style="text-align: center;">4.</td>
                 <td class="meno-hraca-v-tabulke-playoff">Ján Galis</td>
                 <td><img src="img/small/snv-small.png" height="14" class="logo" ></td>
                 <td style="padding-top: 2px;">Spišská</td>
@@ -81,33 +99,25 @@
                 <td class="bodovanie">5</td>
                 <td class="bodovanie">1</td>
             </tr>
+            
             <tr>
-                <td class="umiestnenie-zlatakorcula" style="background-color: #cd7f32;text-align: center;">3.</td>
+                <td class="umiestnenie-zlatakorcula" style="text-align: center;">5.</td>
                 <td class="meno-hraca-v-tabulke-playoff">Derek Syed</td>
                 <td><img src="img/small/skalica-small.png" height="14" class="logo" ></td>
                 <td style="padding-top: 2px;">Skalica</td>
                 <td class="bodovanie">6</td>
                 <td class="bodovanie">1</td>
                 <td class="bodovanie">5</td>
-            </tr>
-             <tr>
-                <td class="umiestnenie-zlatakorcula" style="text-align: center;">4.</td>
-                <td class="meno-hraca-v-tabulke-playoff">Herman Lohmus</td>
-                <td><img src="img/small/trencin-small.png" height="14" class="logo" ></td>
-                <td style="padding-top: 2px;">Trenčín</td>
-                <td class="bodovanie">6</td>
-                <td class="bodovanie">0</td>
-                <td class="bodovanie">6</td>
-            </tr>
+            </tr>        
             <tr>
-                <td class="umiestnenie-zlatakorcula" style="text-align: center;">5.</td>
+                <td class="umiestnenie-zlatakorcula" style="text-align: center;">6.</td>
                 <td class="meno-hraca-v-tabulke-playoff">Chris Graham</td>
                 <td><img src="img/small/kosice-small.png" height="14" class="logo" ></td>
                 <td style="padding-top: 2px;">Košice</td>
                 <td class="bodovanie">5</td>
                 <td class="bodovanie">5</td>
                 <td class="bodovanie">0</td>
-            </tr>
+            </tr>-->
       </tbody>
   </table>
 
