--- a/playoff.html
+++ b/playoff.html
@@ -63,31 +63,40 @@
             <th class="bodovanie">A</th>
         </thead>
         <tbody>
-            <tr>
+             <tr>
                 <td class="umiestnenie-zlatakorcula" style="background-color: #DAA520;text-align: center;">1.</td>
                 <td class="meno-hraca-v-tabulke-playoff">Ladislav Žember</td>
                 <td><img src="img/small/snv-small.png" height="14" class="logo" ></td>
                 <td style="padding-top: 2px;">Spišská</td>
-                <td class="bodovanie">8</td>
-                <td class="bodovanie">6</td>
+                <td class="bodovanie">9</td>
+                <td class="bodovanie">7</td>
                 <td class="bodovanie">2</td>
             </tr>
             <tr>
                 <td class="umiestnenie-zlatakorcula" style="background-color: #C0C0C0;text-align: center;">2.</td>
+                <td class="meno-hraca-v-tabulke-playoff">Leanid Fatsejeu</td>
+                <td><img src="img/small/snv-small.png" height="14" class="logo" ></td>
+                <td style="padding-top: 2px;">Spišská</td>
+                <td class="bodovanie">9</td>
+                <td class="bodovanie">0</td>
+                <td class="bodovanie">9</td>
+            </tr>
+            <tr>
+                <td class="umiestnenie-zlatakorcula" style="background-color:#C0C0C0;text-align: center;">2.</td>
                 <td class="meno-hraca-v-tabulke-playoff">Herman Lohmus</td>
                 <td><img src="img/small/trencin-small.png" height="14" class="logo" ></td>
                 <td style="padding-top: 2px;">Trenčín</td>
-                <td class="bodovanie">7</td>
+                <td class="bodovanie">9</td>
                 <td class="bodovanie">0</td>
-                <td class="bodovanie">7</td>
-            </tr>
+                <td class="bodovanie">9</td>
+             </tr>
             <tr>
                 <td class="umiestnenie-zlatakorcula" style="background-color: #cd7f32;text-align: center;">3.</td>
                 <td class="meno-hraca-v-tabulke-playoff">Radúz Rišnovský</td>
                 <td><img src="img/small/trencin-small.png" height="14" class="logo" ></td>
                 <td style="padding-top: 2px;">Trenčín</td>
-                <td class="bodovanie">6</td>
-                <td class="bodovanie">6</td>
+                <td class="bodovanie">8</td>
+                <td class="bodovanie">8</td>
                 <td class="bodovanie">0</td>
             </tr>
             <!--<tr>
@@ -163,7 +172,7 @@
             <i class="fa fa-trophy"></i>
             <div class="round-details">Finále <br/><span class="date"></span></div> <!-- DOPISAT DATUMY ZAPASOV DO DATE SPAN -->     
             <ul class ="matchup championship">
-                <li class="team team-top" align="left"><img src="img/logo/snv.png" height="20"> HK Spišská Nová Ves<span class="score">0</span></li>
+                <li class="team team-top" align="left"><img src="img/logo/snv.png" height="20"> HK Spišská Nová Ves<span class="score">1</span></li>
                 <li class="team team-bottom" align="left"><img src="img/logo/trencin.png" height="20"> HK Dukla Trenčín<span class="score">1</span></li>
             </ul>
         </div>
@@ -201,14 +210,14 @@
                 <tr id="spodnahranica-zapasy">
                     <td class="datum-playoff">2.8.2020</td>
                     <td><img class="logo-playoff" src="img/logo/snv.png" height="15"> <a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=25632" style="color: black;">HK Spišská Nová Ves</a></td>
-                    <td class="vysledok"><b></b></td>
+                    <td class="vysledok"><b>5:3</b></td>
                     <td><img class="logo-playoff" src="img/logo/trencin.png" height="15"> <a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=29244" style="color: black">HK Dukla Trenčín</a></td>
                 </tr>
                <tr>
-                    <td class="datum-playoff">5.8.2020</td>
-                    <td></td>
-                    <td class="vysledok"><b></b></td>
-                    <td></td>
+                     <td class="datum-playoff">5.8.2020</td>
+                     <td><img class="logo-playoff" src="img/logo/trencin.png" height="15"> <a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=29244" style="color: black">HK Dukla Trenčín</a></td>
+                     <td class="vysledok"><b></b></td>    
+                    <td><img class="logo-playoff" src="img/logo/snv.png" height="15"> <a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=25632" style="color: black;">HK Spišská Nová Ves</a></td>  
                 </tr>
             </tbody>
         </table>
@@ -235,7 +244,7 @@
                <tr id="spodnahranica-zapasy">
                     <td class="datum-playoff">2.8.2020</td>
                     <td><img class="logo-playoff" src="img/logo/hc_kosice.png" height="15"> <a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=9011" style="color: black">HC Košice</a></td>
-                    <td class="vysledok"><b></b></td>
+                    <td class="vysledok"><b>4:3sn</b></td>
                     <td><img class="logo-playoff" src="img/logo/Skalica.png" height="15"> <a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=2991" style="color: black">HK Skalica</a></td>
                 </tr>
                 
