--- a/halloffame.html
+++ b/halloffame.html
@@ -58,7 +58,7 @@
                 <td>Tipsport Liga &nbsp;&nbsp;&nbsp; 1.Sezóna</td>
                 <td></td>
                 <td></td>
-                <td></td>
+                <td><img src="img/logo/hc_kosice.png" height="18"> HC Košice</td>
                 <td><img src="img/logo/trencin.png" height="18"> Lari Suorsa - 15</td>
                 <td></td>
             </tr>
