--- a/managers.html
+++ b/managers.html
@@ -76,7 +76,7 @@
                     </tr>
                     <tr style="border-bottom: 2px solid grey;">
                         <td>Úspechy</td>
-                        <td></td>
+                        <td><img src="img/med_03.png" height="15" style="padding-bottom: 2px;"> 3.miesto, 1.sezóna</td>
                         <td></td>
                     </tr>
                 </tbody>     
