--- a/halloffame.html
+++ b/halloffame.html
@@ -115,10 +115,10 @@
             </tr>
             <tr>
                 <td style="text-align: center;">3.</td>
-                <td></td>
+                <td style="padding-left: 10px;"><img src="img/logo/hc_kosice.png" height="18"> HC Košice</td>
                 <td class="medajla"></td>
                 <td class="medajla"></td>
-                <td class="medajla"></td>
+                <td class="medajla">1</td>
             </tr>
         </tbody>
     </table>
