--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
  <div class="rozdelenie-clankov"> 
 
  <div class="clanky-mobil" style="">
-    <div  align="center"><img class="mobile-responsive-img" src="img/finaleplayoff.jpg" height="350" width="500"></div>
+    <div  align="center"><img class="mobile-responsive-img" src="img/clubs/4188820_1200x.jpeg" height="350" width="500"></div>
     <span class="news">News</span>
-       <p style="font-weight: bold; font-size:20px; padding-top: 10px; color: black; text-align: left; ">Finále Play-off pozná svojích účastníkov</p>
-       <h4> Po napínavej sérií medzi <b>Duklou</b> a <b>Skalicou</b> sa Trenčínu podarilo zvíťaziť v rozhodujúcom zápase vysoko 8:2! a postúpili do finále. Svojho súpera spoznali o jedeň deň neskôr keď <b>Spišská</b> vyhrala svoj druhý zápas proti <b>Košiciam</b> a nedala im tak šancu sa dostať do finále a za stavu série 2:0 si zabuje o pohár <b>Vladimíra Dzurillu</b> s Trenčínom. Košice majú stále šancu o medajlové umiestnenie, o ktoré sa pobiju so Skalicou.</h4>
+       <p style="font-weight: bold; font-size:20px; padding-top: 10px; color: black; text-align: left; ">HC KOŠICE získavaju medailu za 3.miesto</p>
+       <h4><b>Košice</b> ukončili sezónu na treťom mieste, kde v play-off porazili <b>Skalicu 2:0</b> (0:5, 4:3sn) na série. Košiciam za ich výkon v sezóne ďakujeme a taktiež aj ich aktívnému manažérovi. Nás ešte čaká posledný finálový zápas o pohár Vladimíra Dzurillu.</h4>
    </div> 
 
    <div class="clanky-mobil" style="">
