--- a/managers.html
+++ b/managers.html
@@ -52,7 +52,7 @@
                     </tr>
                     <tr style="border-bottom: 2px solid grey;">
                         <td>Úspechy</td>
-                        <td></td>
+                        <td>Štvrťfinále konferencie, 1.sezóna</td>
                         <td></td>
                     </tr>
                 </tbody>     
@@ -127,7 +127,7 @@
                     </tr>
                     <tr style="border-bottom: 2px solid grey;">
                         <td>Úspechy</td>
-                        <td></td>
+                        <td>Semifinále konferencie, 1.sezóna</td>
                         <td></td>
                     </tr>
                 </tbody>     
@@ -166,7 +166,7 @@
                     </tr>
                     <tr style="border-bottom: 2px solid grey;">
                         <td>Úspechy</td>
-                        <td></td>
+                        <td>Štvrťfinále konferencie, 1.sezóna</td>
                         <td></td>
                     </tr>
                 </tbody>      
@@ -189,7 +189,7 @@
                     </tr>
                     <tr style="border-bottom: 2px solid grey;">
                         <td>Úspechy</td>
-                        <td></td>
+                        <td>Semifinále konferencie, 1.sezóna</td>
                         <td></td>
                     </tr>
                 </tbody>     
@@ -261,7 +261,7 @@
                     </tr>
                     <tr style="border-bottom: 2px solid grey;">
                         <td>Úspechy</td>
-                        <td></td>
+                        <td>Semifinále konferencie, 1.sezóna</td>
                         <td></td>
                     </tr>
                 </tbody>     
@@ -289,7 +289,7 @@
                     </tr>
                     <tr style="border-bottom: 2px solid grey;">
                         <td>Úspechy</td>
-                        <td></td>
+                        <td>Štvrťfinále konferencie, 1.sezóna</td>
                         <td></td>
                     </tr>
                 </tbody>     
