--- a/managers.html
+++ b/managers.html
@@ -361,7 +361,7 @@
                     </tr>
                     <tr style="border-bottom: 2px solid grey;">
                         <td>Úspechy</td>
-                        <td></td>
+                        <td>Boj o 3.miesto, 1.sezóna</td>
                         <td></td>
                     </tr>
                 </tbody>     
