--- a/stats.html
+++ b/stats.html
@@ -70,7 +70,7 @@ let personData = [
          {'flag':'<img src="img/nat/ir.gif" height="12">', 'name':' Robert Henry ', 'club':'<img src=img/small/bardejov-small.png> Bardejov','age': 30,'rating': 456, 'points':0, 'goals':0, 'asists': 0,  }, 
 
         // BYSTRICA //
-        {'flag':'<img src="img/nat/fin.gif" height="12">', 'name':' Niklas Laisi ', 'club':'<img src=img/small/bb-small.png> Bystrica','age': 35,'rating': 390, 'points':0, 'goals':0, 'asists': 0,  },
+        {'flag':'<img src="img/nat/lot.gif" height="12">', 'name':' Zigmunds Laviņš ', 'club':'<img src=img/small/bb-small.png> Bystrica','age': 32,'rating': 407, 'points':0, 'goals':0, 'asists': 0,  },
         
         // DETVA //
         {'flag':'<img src="img/nat/nor.gif" height="12">', 'name':' Leo Velo ', 'club':'<img src=img/small/detva-small.png> Detva','age': 27,'rating': 399, 'points':0, 'goals':0, 'asists': 0,  },
@@ -137,7 +137,7 @@ let personData = [
     
         tableBody.innerHTML = dataHtml;
     }
-
+    /*--------------------------------
     function leastToGreatest (num) {
         var array = [];
         var num1 = 0;
@@ -159,6 +159,8 @@ let personData = [
            return array;
      }
      leastToGreatest(2,1,3);
+     -----------------------------------------------*/
+
 
     function sortColumn(columnName){
         const dataType = typeof personData[0][columnName];
