--- a/index.html
+++ b/index.html
@@ -54,21 +54,21 @@
  <div class="clanky-mobil" style="">
     <div  align="center"><img class="mobile-responsive-img" src="img/clubs/4188820_1200x.jpeg" height="350" width="500"></div>
     <span class="news">News</span>
-       <p style="font-weight: bold; font-size:20px; padding-top: 10px; color: black; text-align: left; ">HC KOŠICE získavaju medailu za 3.miesto</p>
+       <p style="font-weight: bold; font-size:20px; padding-top: 10px; color: #000000; text-align: left; ">HC KOŠICE získavaju medailu za 3.miesto</p>
        <h4><b>Košice</b> ukončili sezónu na treťom mieste, kde v play-off porazili <b>Skalicu 2:0</b> (0:5, 4:3sn) na série. Košiciam za ich výkon v sezóne ďakujeme a taktiež aj ich aktívnému manažérovi. Nás ešte čaká posledný finálový zápas o pohár Vladimíra Dzurillu.</h4>
    </div> 
 
    <div class="clanky-mobil" style="">
     <img class="mobile-responsive-img" src="img/vsetky-kluby.png" height="257">
     <span class="news">News</span>
-       <p style="font-weight: bold; font-size:20px; padding-top: 10px; color: black; text-align: left; ">2.sezóna oficiálne štartuje 8.8.2020</p>
+       <p style="font-weight: bold; font-size:20px; padding-top: 10px; color: #000000; text-align: left; ">2.sezóna oficiálne štartuje 8.8.2020</p>
        <h4>V lige nastalo pár zmien. Do ligy prišli tri nové tímy a to <b>Žilina, Bardejov a Nitra</b>, ktorú sme nedokázali získať v prvej sezóne. <b>Nitru</b> si pod krídla do 2.sezóny zobral manažér <b>Zero Zhen</b>. Naopak z ligy odstúpila <b>Gelnica, Martin a Piešťany</b>. Manažér Piešťan, ktoré odstúpili by časom uvítal návrat, ktorý teraz nie je možný kvôli plnej kapacite lige. Vedenie ligy na to bude v budúcích sezónach myslieť.</h4>
    </div> 
 
    <div class="clanky-mobil" style="">
     <div  align="center"><img src="img/interview.png" height="257"></div>
     <span class="news">News</span>
-       <p style="font-weight: bold; font-size:20px; padding-top: 10px; color: black; text-align: left; ">Manažérske kreslo v Bystrici</p>
+       <p style="font-weight: bold; font-size:20px; padding-top: 10px; color: #000000; text-align: left; ">Manažérske kreslo v Bystrici</p>
        <h4>Ďalšia zmena nastala na poste manažéra v Banskej Bystrici, kde vedenie klubu zmenilo manažéra. Novým manažérom klubu <b>HC `05 Banská Bystrica</b>, ktorý prešiel pracovným pohovorom sa stáva <b>steeve</b>. V turnaji prajeme veľa úspechov na mieste manažéra.</h4>
    </div>    
 
