--- a/halloffame.html
+++ b/halloffame.html
@@ -56,12 +56,13 @@
             </tr>
             <tr>
                 <td>Tipsport Liga &nbsp;&nbsp;&nbsp; 1.Sezóna</td>
-                <td></td>
-                <td></td>
+                <td><img src="img/logo/hk_spisská_nová_ves.png" height="18"> HK Spišská Nová Ves</td>
+                <td><img src="img/logo/trencin.png" height="18"> HK Dukla Trenčín</td>
                 <td><img src="img/logo/hc_kosice.png" height="18"> HC Košice</td>
                 <td><img src="img/logo/trencin.png" height="18"> Lari Suorsa - 15</td>
-                <td></td>
+                <td><img src="img/logo/trencin.png" height="18"> Herman Lohmus - 10</td>
             </tr>
+
         </tbody>
     </table>
 </div>
@@ -82,7 +83,7 @@
             </tr>
             <tr>
                 <td>Tipsport Liga &nbsp;&nbsp;&nbsp; 1.Sezóna</td>
-                <td></td>
+                <td><img src="img/logo/hk_spisská_nová_ves.png" height="18"> HK Spišská Nová Ves</td>
                 <td style="text-align: center;"> Neudeľoval sa</td>
                 
             </tr>
@@ -101,16 +102,16 @@
         <tbody>
             <tr>
                 <td style="text-align: center;">1.</td>
-                <td></td>
-                <td class="medajla"></td>
+                <td style="padding-left: 10px;"><img src="img/logo/hk_spisská_nová_ves.png" height="18"> HK Spišská Nová Ves</td>
+                <td class="medajla">1</td>
                 <td class="medajla"></td>
                 <td class="medajla"></td>
             </tr>
             <tr>
                 <td style="text-align: center;">2.</td>
-                <td></td>
+                <td style="padding-left: 10px;"><img src="img/logo/trencin.png" height="18"> HK Dukla Trenčín</td>
                 <td class="medajla"></td>
-                <td class="medajla"></td>
+                <td class="medajla">1</td>
                 <td class="medajla"></td>
             </tr>
             <tr>
