--- a/playoff.html
+++ b/playoff.html
@@ -63,70 +63,15 @@
             <th class="bodovanie">A</th>
         </thead>
         <tbody>
-             <tr>
-                <td class="umiestnenie-zlatakorcula" style="background-color: #DAA520;text-align: center;">1.</td>
-                <td class="meno-hraca-v-tabulke-playoff">Ladislav Žember</td>
-                <td><img src="img/small/snv-small.png" height="14" class="logo" ></td>
-                <td style="padding-top: 2px;">Spišská</td>
-                <td class="bodovanie">9</td>
-                <td class="bodovanie">7</td>
-                <td class="bodovanie">2</td>
-            </tr>
             <tr>
-                <td class="umiestnenie-zlatakorcula" style="background-color: #C0C0C0;text-align: center;">2.</td>
-                <td class="meno-hraca-v-tabulke-playoff">Leanid Fatsejeu</td>
-                <td><img src="img/small/snv-small.png" height="14" class="logo" ></td>
-                <td style="padding-top: 2px;">Spišská</td>
-                <td class="bodovanie">9</td>
-                <td class="bodovanie">0</td>
-                <td class="bodovanie">9</td>
-            </tr>
-            <tr>
-                <td class="umiestnenie-zlatakorcula" style="background-color:#C0C0C0;text-align: center;">2.</td>
+                <td class="umiestnenie-zlatakorcula" style="background-color:#DAA520;text-align: center;">1.</td>
                 <td class="meno-hraca-v-tabulke-playoff">Herman Lohmus</td>
                 <td><img src="img/small/trencin-small.png" height="14" class="logo" ></td>
                 <td style="padding-top: 2px;">Trenčín</td>
-                <td class="bodovanie">9</td>
+                <td class="bodovanie">10</td>
                 <td class="bodovanie">0</td>
-                <td class="bodovanie">9</td>
+                <td class="bodovanie">10</td>
              </tr>
-            <tr>
-                <td class="umiestnenie-zlatakorcula" style="background-color: #cd7f32;text-align: center;">3.</td>
-                <td class="meno-hraca-v-tabulke-playoff">Radúz Rišnovský</td>
-                <td><img src="img/small/trencin-small.png" height="14" class="logo" ></td>
-                <td style="padding-top: 2px;">Trenčín</td>
-                <td class="bodovanie">8</td>
-                <td class="bodovanie">8</td>
-                <td class="bodovanie">0</td>
-            </tr>
-            <!--<tr>
-                <td class="umiestnenie-zlatakorcula" style="text-align: center;">4.</td>
-                <td class="meno-hraca-v-tabulke-playoff">Ján Galis</td>
-                <td><img src="img/small/snv-small.png" height="14" class="logo" ></td>
-                <td style="padding-top: 2px;">Spišská</td>
-                <td class="bodovanie">6</td>
-                <td class="bodovanie">5</td>
-                <td class="bodovanie">1</td>
-            </tr>
-            
-            <tr>
-                <td class="umiestnenie-zlatakorcula" style="text-align: center;">5.</td>
-                <td class="meno-hraca-v-tabulke-playoff">Derek Syed</td>
-                <td><img src="img/small/skalica-small.png" height="14" class="logo" ></td>
-                <td style="padding-top: 2px;">Skalica</td>
-                <td class="bodovanie">6</td>
-                <td class="bodovanie">1</td>
-                <td class="bodovanie">5</td>
-            </tr>        
-            <tr>
-                <td class="umiestnenie-zlatakorcula" style="text-align: center;">6.</td>
-                <td class="meno-hraca-v-tabulke-playoff">Chris Graham</td>
-                <td><img src="img/small/kosice-small.png" height="14" class="logo" ></td>
-                <td style="padding-top: 2px;">Košice</td>
-                <td class="bodovanie">5</td>
-                <td class="bodovanie">5</td>
-                <td class="bodovanie">0</td>
-            </tr>-->
       </tbody>
   </table>
 
@@ -172,7 +117,7 @@
             <i class="fa fa-trophy"></i>
             <div class="round-details">Finále <br/><span class="date"></span></div> <!-- DOPISAT DATUMY ZAPASOV DO DATE SPAN -->     
             <ul class ="matchup championship">
-                <li class="team team-top" align="left"><img src="img/logo/snv.png" height="20"> HK Spišská Nová Ves<span class="score">1</span></li>
+                <li class="team team-top" align="left" style="background-color: rgb(218,165,32); color: white;"><img src="img/logo/snv.png" height="20"> HK Spišská Nová Ves<span class="score">2</span></li>
                 <li class="team team-bottom" align="left"><img src="img/logo/trencin.png" height="20"> HK Dukla Trenčín<span class="score">1</span></li>
             </ul>
         </div>
@@ -216,7 +161,7 @@
                <tr>
                      <td class="datum-playoff">8.8.2020</td>
                      <td><img class="logo-playoff" src="img/logo/trencin.png" height="15"> <a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=29244" style="color: black">HK Dukla Trenčín</a></td>
-                     <td class="vysledok"><b></b></td>    
+                     <td class="vysledok"><b>2:4</b></td>    
                     <td><img class="logo-playoff" src="img/logo/snv.png" height="15"> <a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=25632" style="color: black;">HK Spišská Nová Ves</a></td>  
                 </tr>
             </tbody>
