--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <div class="uvod">
     <div style="display: flex;">
-        <img class="mobile-responsive-img" src="img/clubs/kosice.jpg" width="1200" height="700">
+        <img class="mobile-responsive-img" src="img/105145-hokej-spisska-clanokW.jpg" width="1200" height="700">
     </div>    
     <article class="clanok-uvod">
         <div style=" display: block; padding-left: 50px;">
