--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     </div>    
     <article class="clanok-uvod">
         <div style=" display: block; padding-left: 50px;">
-            <h1 style="text-transform: uppercase; color: white; padding-top: 250px;">2.sezóna</h1>
-            <h3 style="text-transform: uppercase; color: white;">Oficiálne začína v sobotu 8.8.2020</h3>
+            <h1 style="text-transform: uppercase; color: white; padding-top: 250px;">GRATULUJEME</h1>
+            <h3 style="text-transform: uppercase; color: white;">Majstrom 1.sezóny sa stáva <span style="color: #f7c201">Spišská Nová Ves</span></h3>
         </div>    
     </article>
 </div>
