--- a/managers.html
+++ b/managers.html
@@ -96,12 +96,12 @@
                     </tr>
                     <tr>
                         <td>Sezóny</td>
-                        <td>1. - aktuálne</td>
+                        <td>1.sezóna</td>
                         <td></td>
                     </tr>
                     <tr style="border-bottom: 2px solid grey;">
                         <td>Úspechy</td>
-                        <td></td>
+                        <td><img src="img/med_02.png" height="15" style="padding-bottom: 2px;"> 2.miesto, 1.sezóna</td>
                         <td></td>
                     </tr>
                 </tbody>     
@@ -335,7 +335,7 @@
                     </tr>
                     <tr style="border-bottom: 2px solid grey;">
                         <td>Úspechy</td>
-                        <td></td>
+                        <td><img src="img/med_01.png" height="15" style="padding-bottom: 2px;"> 1.miesto, 1.sezóna</td>
                         <td></td>
                     </tr>
                 </tbody>     
